Fri Jul 11 11:11:50 2014  Koichi Sasada  <ko1@atdot.net>

	* benchmark/prepare_so_k_nucleotide.rb: use require_relative.

	* benchmark/prepare_so_reverse_complement.rb: ditto.

Fri Jul 11 10:09:03 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* pack.c (encodes): fix buffer overrun by tail_lf.  Thanks to
	  Mamoru Tasaka and Tomas Hoger.  [ruby-core:63604] [Bug #10019]

Thu Jul 10 23:51:36 2014  Naohisa Goto  <ngotogenome@gmail.com>

	* hash.c (ruby_setenv): Fix TestEnv#test_aset failure on Solaris 9.
	  When name contains '=', ruby_setenv raises Errno::EINVAL.
	  That is the same behavior as Solaris 10.
	  NULL check for malloc return value is also added.

Thu Jul 10 15:02:55 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_callee_setup_keyword_arg): adjust VM stack
	  pointer to get rid of overwriting splat arguments by arguments
	  for `to_hash` conversion.  [ruby-core:63593] [Bug #10016]

Thu Jul 10 01:09:57 2014  Koichi Sasada  <ko1@atdot.net>

	* symbol.c: remove rb_gc_mark_symbols().

	  fstrings referred by static symbols and pinned dynamic symbols
	  are registered by rb_gc_register_mark_object().

	  fstring referred by dynamic symbols (not pinned symbols)
	  are referred from global_symbols.dsymbol_fstr_hash (Hash object).

	  Note that fstrings referred from dynamic symbols must live logger
	  than symbol objects themselves because rb_gc_free_dsymbol() uses
	  fstring to remove from symbol tables.
	  This is why we can not mark fstrings from dynamic symbols.

	  This technique reduces root objects for GC marking.

	* gc.c (gc_mark_roots): ditto.

	* internal.h: ditto.

Thu Jul 10 00:24:18 2014  Naohisa Goto  <ngotogenome@gmail.com>

	* common.mk (DTRACE_DEPENDENT_OBJS): fix build failure on Solaris
	  introduced in r46768. Object files containing dtrace probes should
	  be listed in DTRACE_DEPENDENT_OBJS.

Wed Jul  9 17:07:28 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
